# grepq

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  LICENSE.md  README.md  book.toml  build.rs  codemeta.json  cookbook.md  grep.txt  help.md  justfile  matches.json  out.txt  setup_tests.sh  test-2.txt  test-3.txt  test-4.txt  test-6.txt  test.sh  test.txt  test_helper.bash  tests.yaml
.cspell/: custom-dictionary-workspace.txt
.github/: FUNDING.yml
.github/worflows/: build.yml  test.yml
.github/workflows/: grepq-action.yml  ubuntu.yml
benches/: benchmarks.rs
book/: 404.html  Citation-and-preprint.html  Examples-and-tests.html  Feature-set.html  Features-and-performance-in-detail.html  Further-testing.html  Installation.html  License.html  Requirements.html  Update-changes.html  Usage.html  arg.rs  index.html  initialise.rs  inverted.rs  lib.rs  main.rs  print.html  searchindex.js  searchindex.json  summarise.rs  tests.rs  toc.html  toc.js
docs/: Installation.html  Requirements.html  Usage.html  arg.rs  main.rs  print.html  searchindex.js  searchindex.json  tune.rs
examples/: 16S-iupac-and-predicates.json  16S-iupac.json  16S-iupac.yaml  16S-no-iupac.json  16S.json  2025-02-18T21:33:40.108864+00:00.json  2025-02-18T21:46:40.127009+00:00.json  SARS-CoV-2.txt  commands-1.yaml  commands-2.yaml  commands-3.yaml  commands-4.yaml  commands-temp.yaml  compare.sh  cookbook.sh  count.txt  export_fastq.sql  fastq_20250315_125343.db  grepq-schema.json  kmer_benchmark.sh  kmer_test.sh  match.sh  matches copy.json  matches-copy.json  matches.json  quality.sh  regex-and-predicates.json  regex.json  regression.sh  small-copy.fastq.zst  small.fastq  summarise.sql  test.sh  tests.yaml  tests2.yaml  tests3.yaml  tiny.fastq  tune.sh  variants-as-json-array.sql
paper/: Makefile  paper.bib  paper.html  paper.md  paper_2025-05-31.md  plot_performance.R  supplemental.md
src/: Citation-and-preprint.md  Examples-and-tests.md  Features-and-performance-in-detail.md  Further-testing.md  Installation.md  Requirements.md  SUMMARY.md  Update-changes.md  Usage.md  arg.rs  feature-set.md  initialise.rs  intro.md  inverted.rs  kmer_utils.rs  lib.rs  main.rs  output.rs  quality.rs  summarise.rs  tests.rs  tune.rs  utils.rs
src/src/: Citation-and-preprint.md  Feature-set.md  Features-and-performance-in-detail.md  Further-testing.md  Update-changes.md
test/: run_tests.sh  test-ubuntu.bats  test.bats  timings.xlsx
