[package]
name = "grepq"
version = "1.6.4"
edition = "2021"
authors = ["Nicholas D. Crosbie"]
license = "MIT"
description = "quickly filter fastq files"
homepage = "https://github.com/Rbfinch/grepq"
documentation = "https://github.com/Rbfinch/grepq"
repository = "https://github.com/Rbfinch/grepq"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "FASTQ", "REGEX", "JSON", "cli"]

[dependencies]
seq_io = "0.3.4"
regex = "1.11.1"
mimalloc = "0.1.47"
clap = { version = "4.5.41", features = ["derive", "cargo"] }
num_cpus = "1.17.0"
flate2 = { version = "1.1.2", features = ["zlib-ng"], default-features = false }
jsonschema = "0.30.0"
serde_json = "1.0.141"
colored = "3.0.0"
zstd = "0.13.3"
rusqlite = "0.37.0"
chrono = "0.4.41"
serde = "1.0.219"
clap-markdown = "0.1.5"
phf = "0.12.1"

[build-dependencies]
phf = "0.12.1"
phf_codegen = "0.12.1"

[dev-dependencies]
tempfile = "3.20.0"
criterion = { version = "0.6.0", features = ["html_reports"] }

[lib]
name = "grepq"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
