[package]
name = "grepq"
version = "1.6.6"
edition = "2021"
authors = ["Nicholas D. Crosbie"]
license = "MIT"
description = "quickly filter fastq files"
homepage = "https://github.com/Rbfinch/grepq"
documentation = "https://github.com/Rbfinch/grepq"
repository = "https://github.com/Rbfinch/grepq"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "FASTQ", "REGEX", "JSON", "cli"]

[dependencies]
seq_io = "0.3.4"
regex = "1.12.3"
mimalloc = "0.1.48"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
num_cpus = "1.17.0"
flate2 = { version = "1.1.9", features = ["zlib-ng"], default-features = false }
jsonschema = "0.46.0"
serde_json = "1.0.149"
colored = "3.1.1"
zstd = "0.13.3"
rusqlite = "0.39.0"
chrono = "0.4.44"
serde = "1.0.228"
clap-markdown = "0.1.5"
phf = "0.13.1"

[build-dependencies]
phf = "0.13.1"
phf_codegen = "0.13.1"

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[lib]
name = "grepq"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
